--- a/python.tex
+++ b/python.tex
@@ -5,9 +5,10 @@ The \osprey3 distribution contains a Python module which can be installed using 
 
 See Figure~\ref{fig:python} for a complete example of a Python script that performs a very simple design using \osprey3.
 
-\begin{figure}\label{fig:python}
+\begin{figure}
 {\fontfamily{pcr}
 	\lstinputlisting[language=Python]{figures/findGMEC.py}
 }
 \caption{A Python script that performs a very simple design in \osprey3.}
+\label{fig:python}
 \end{figure}
