--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -16,9 +16,13 @@
 \usepackage[numbers,super,comma,sort&compress]{natbib}
 %\usepackage[nolists, nomarkers, figuresfirst]{endfloat}
 
+%table things used in KSTests.tex
 \usepackage{array,multirow,graphicx}
 \usepackage{tabulary}
 \newcolumntype{K}[1]{>{\centering\arraybackslash}p{#1}}
+\usepackage{xcolor, colortbl}
+\definecolor{LightCyan}{rgb}{0.6,0.8,1}
+
 
 \usepackage{xcolor}
 \usepackage{xspace}
