--- a/KSTests.tex
+++ b/KSTests.tex
@@ -5,7 +5,7 @@ Our retrospective validation experiments focused on mutations at residues in or 
 \begin{figure}
  \center
  \includegraphics[width=\textwidth]{figures/designExamples.png}
- \caption{(A) The structure of the IFN$\alpha$2:ifnar2 complex (PDB ID: 3S9D \cite{pdb3s9d}) with separate chains shown in cyan and magenta and with two example interface design regions shown in boxes. Each box contains a mutable residue shown as a stick and its surrounding flexible residues shown as lines. (B) and (F) zoom in on each design. (B-D) Design at position R33 for a mutation that decreases binding: R33Q. (B) The wildtype sequence with probe dots \cite{Probe} emphasizing favorable interactions with surrounding flexible residues (shown as lines). (D) The mutant sequence (R33Q) with probe dots emphasizing some favorable as well as infavorable interactions. Comparing (B) and (D), it is clear there is a loss in interactions and a gain in infavorable interactions upon mutation from R to Q, this behavior is captured accurately by the \ks algorithm (See Table \ref{table:spearman}). (C) \& (E) The top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. (F-I) Design at position N156 for a mutation that increases binding: N156A. (F) The wildtype sequence with probe dots emphasizing some favorable interactions with surrounding flexible residues (shown as lines). (H) The mutant sequence (N156A) with probe dots emphasizing some favorable interactions with surrounding flexible residues (shown as lines). There are some gained interactions in (H) compared to (F), but these are not easily detected and emphasizes the importance of \ks, which successfully picks up these nuanced changes and correctly predicts improved binding (See Table \ref{table:spearman}). (G) and (I) show the top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. Not shown are the ensembles for the unbound states that are also used to calculate the \ks scores.}
+ \caption{(A) The structure of the IFN$\alpha$2:IFNAR2 complex (PDB ID: 3S9D \cite{pdb3s9d}) with separate chains shown in cyan and magenta and with two example interface design regions shown in boxes. Each box contains a mutable residue shown as sticks and its surrounding flexible residues shown as lines. (B) and (F) zoom in on each design. (B-D) Design at position R33 for a mutation that decreases binding: R33Q. (B) The wildtype sequence with probe dots \cite{Probe} displaying favorable interactions with surrounding flexible residues (shown as lines). (D) The mutant sequence (R33Q) with probe dots displaying some favorable as well as unfavorable interactions. Comparing (B) and (D), it is clear there is a loss in favorable interactions and a gain in unfavorable interactions upon mutation from R to Q; this behavior is captured accurately by the \ks algorithm (See Table \ref{table:spearman}). (C) \& (E) The top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. (F-I) Design at position N156 for a mutation that increases binding: N156A. (F) The wildtype sequence with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). (H) The mutant sequence (N156A) with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). There are some gained interactions in (H) compared to (F), but these are not easily detected, thus emphasizing the importance of \ks, which successfully picks up these nuanced changes and correctly predicts improved binding (See Table \ref{table:spearman}). (G) and (I) show the top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. Not shown are the ensembles for the unbound states that are also used to calculate the \ks scores.}
 \label{fig:designs}
 \end{figure}
 
