--- a/KSTests.tex
+++ b/KSTests.tex
@@ -1,11 +1,15 @@
-To evaluate the accuracy of the \osprey \ks algorithm~\cite{K*}, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by name and PDB ID in Table \ref{table:spearman} \cite{pdb1x1u,pdb2pcb,pdb3s9d,pdb2b5i}.  These systems include barnase with its peptide inhibitor barstar \cite{binding2barnase,bindingbarnase}, the cytochrome {\it c}:cytochrome {\it c} peroxidase complex \cite{bindingcytc}, interferon (IFN)$\alpha$2 with its receptor, ifnar2  \cite{bindingifna2}, and the interleukin 2 (IL-2):IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex \cite{bindingil2}.
+To evaluate the accuracy of the implementation of the newest optimizations in \osprey3, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks \cite{K*} to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by name and PDB ID in Table \ref{table:spearman} \cite{pdb1x1u,pdb2pcb,pdb3s9d,pdb2b5i}.  These systems include barnase with its peptide inhibitor barstar \cite{binding2barnase,bindingbarnase}, the cytochrome {\it c}:cytochrome {\it c} peroxidase complex \cite{bindingcytc}, interferon (IFN)$\alpha$2 with its receptor, ifnar2  \cite{bindingifna2}, and the interleukin 2 (IL-2):IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex \cite{bindingil2}.
 
-Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface that were not limited to alanine scanning. Including some of these tested and reported mutations \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2}, for each structure we tested anywhere from 5 to 19 designs. In total, we tested 58 mutations using default, out-of-the-box \osprey settings and parameters. Each design included one or two mutable residues along with a set of surrounding flexible residues (See Table \ref{table:spearman}). Flexible residues were chosen by selecting all residues within 4{\AA} of the mutable residues and removing those which only have backbone interactions. Two example designs are shown in Figure \ref{fig:designs}. For each system, the \ks scores were ranked in increasing order of reported experimental binding. Spearman's $\rho$ values were subsequently calculated for each system by calculating the statistical dependence between the \ks score rankings and the experimentally measured rankings (Table \ref{table:spearman}). 
+Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface that were not limited to alanine scanning. Including some of these tested and reported mutations \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2}, for each structure we tested anywhere from 5 to 19 designs. In total, we tested 58 mutations using default, out-of-the-box \osprey3 settings and parameters. Each design included one or two mutable residues along with a set of surrounding flexible residues (See Table \ref{table:spearman}). Flexible residues were chosen by selecting all residues within 4 {\AA} of the mutable residues and removing those which only have backbone interactions. Two example designs are shown in Figure \ref{fig:designs}, where \osprey3 and \ks accurately predict the effect of two point mutations in the interface of the IFN$\alpha$2:IFNAR2 complex (highlighted in blue in Table \ref{table:spearman}). 
+
+For each system, the \ks scores were ranked in increasing order of reported experimental binding. Spearman's $\rho$ values were subsequently calculated for each system by calculating the statistical dependence between the \ks score rankings and the experimentally measured rankings (See Table \ref{table:spearman} and Figure \ref{fig:rankings}). This is a sound measure because generally the output of a design calculation that is used to decide which mutants to make experimentally is simply the intra-system ranks of the mutants. Looking at the values in Table \ref{table:spearman}, we see a high correlation in the rankings between experimentally measured binding and binding predicted by \osprey3 and \ks for each system with values ranging from 0.500 to 0.795. We found that, across the tested systems, the Spearman's $\rho$ value is 0.762. This value is the Pearson correlation of the intra-system ranks of all the mutants.      
+
+
 
 \begin{figure}
  \center
  \includegraphics[width=\textwidth]{figures/designExamples.png}
- \caption{(A) The structure of the IFN$\alpha$2:IFNAR2 complex (PDB ID: 3S9D \cite{pdb3s9d}) with separate chains shown in cyan and magenta and with two example interface design regions shown in boxes. Each box contains a mutable residue shown as sticks and its surrounding flexible residues shown as lines. (B) and (F) zoom in on each design. (B-D) Design at position R33 for a mutation that decreases binding: R33Q. (B) The wildtype sequence with probe dots \cite{Probe} displaying favorable interactions with surrounding flexible residues (shown as lines). (D) The mutant sequence (R33Q) with probe dots displaying some favorable as well as unfavorable interactions. Comparing (B) and (D), it is clear there is a loss in favorable interactions and a gain in unfavorable interactions upon mutation from R to Q; this behavior is captured accurately by the \ks algorithm (See Table \ref{table:spearman}). (C) \& (E) The top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. (F-I) Design at position N156 for a mutation that increases binding: N156A. (F) The wildtype sequence with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). (H) The mutant sequence (N156A) with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). There are some gained interactions in (H) compared to (F), but these are not easily detected, thus emphasizing the importance of \ks, which successfully picks up these nuanced changes and correctly predicts improved binding (See Table \ref{table:spearman}). (G) and (I) show the top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. Not shown are the ensembles for the unbound states that are also used to calculate the \ks scores.}
+ \caption{(A) The structure of the IFN$\alpha$2:IFNAR2 complex (PDB ID: 3S9D \cite{pdb3s9d}) with separate chains shown in cyan and magenta and with two example interface design regions shown in boxes. Each box contains a mutable residue shown as sticks and its surrounding flexible residues shown as lines. (B) and (F) zoom in on each design. (B-E) Design at position R33 for a mutation that decreases binding: R33Q. (B) The wildtype sequence with probe dots \cite{Probe} displaying favorable interactions with surrounding flexible residues (shown as lines). (D) The mutant sequence (R33Q) with probe dots displaying some favorable as well as unfavorable interactions. Comparing (B) and (D), it is clear there is a loss in favorable interactions and a gain in unfavorable interactions upon mutation from R to Q; this behavior is captured accurately by the \ks algorithm (See Table \ref{table:spearman}). (C) and (E) show the top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. (F-I) Design at position N156 for a mutation that increases binding: N156A. (F) The wildtype sequence with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). (H) The mutant sequence (N156A) with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). There are some gained interactions (shown by an increase in the number of favorable probe dots) in (H) compared to (F), but these are not easily detected, thus emphasizing the importance of \ks, which successfully picks up these nuanced changes and correctly predicts improved binding (See Table \ref{table:spearman}). (G) and (I) show the top 10 conformations found in the conformational ensemble used in the \ks calculation for each sequence. Not shown are the ensembles for the unbound states that are also used to calculate the \ks scores.}
 \label{fig:designs}
 \end{figure}
 
@@ -86,7 +90,7 @@ Our retrospective validation experiments focused on mutations at residues in or 
 \hline
 \end{tabular}
 }
-\caption{Allowed mutations for each system are listed along with their corresponding rankings from experimental \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2} and computational results. The mutations highlighted in blue are shown in detail in Figure \ref{fig:designs}. A Spearman's $\rho$ value is calculated for each system and shown here. The ``Across All" value is calculated by ranking each system individually and then calculating the Spearman's $\rho$ across all of the designs---in other words, it is the Pearson correlation of the intra-system ranks of all the mutants.  We consider this meaningful because the output of a design calculation that is used to decide on mutants to make experimentally is simply the intra-system ranks of the mutants.}
+\caption{Allowed mutations for each system are listed along with their corresponding rankings from experimental measurements \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2} vs. computational predictions by \ks from \osprey3. The mutations highlighted in blue are shown in detail in Figure \ref{fig:designs}. A Spearman's $\rho$ value is calculated for each system and shown here. The ``Across All" value is calculated by ranking each system individually and then calculating the Spearman's $\rho$ across all of the designs.}
 \label{table:spearman}
 \end{table}
 
