--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -86,7 +86,7 @@ Protein design, drug design, GPU, structural biology, Python
 \colorbox{background-color}{
 \fbox{
 \begin{minipage}{1.0\textwidth}
-\includegraphics[width=50mm,height=33mm]{figures/speedup.pdf} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
+\includegraphics[width=0.35\textwidth]{figures/abstract_image.png} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
 %\includegraphics[width=110mm,height=20mm]{cc.eps}
 %\\
 We present the third major release of the OSPREY protein design software, along with comparisons to experimental results that confirm its ability to identify protein mutants with improved function.  The new version has significant efficiency, ease-of-use, and algorithmic improvements over previous versions, including GPU acceleration and a new Python interface.  
