Fixt my speling

--- a/Astar.tex
+++ b/Astar.tex
@@ -1,6 +1,6 @@
 \osprey3's code has been heavily optimized to improve single-threaded performance. Two main areas have received the most attention, and the most improvement in performance, so far: \as search speed, and conformation minimization speed.
 
-The performance of \as search in \osprey depends mostly on the size of the conformation space of the design. More mutable and flexibile residues create a larger conformation space which must be searched systematically to find the lowest-energy conformations while perserving guarantees on solution quality, and hence the search requires more time. Search time is also dependent on the speed at which we can execute the scoring functions on \as nodes. Optimizations in \osprey3 have dramatically increased the \as node scoring speed mainly through the re-use of computed values between different nodes. Many intermediate values used by the \as scoring functions need only be computed once per design and can be cached throughout the rest of the search. This reduces the cost of node scoring by roughly an order of magnitude. We can also score child nodes differentially against their parent nodes to speed up node scoring. Caching intermediate values during the parent node scoring and using them to simplify child node scoring yields roughly another order of magnitude speedup in \as node scoring. %\jeff{trying to be concise here, hopefully we don't need the mathematical details of these \as scoring functions?}
+The performance of \as search in \osprey depends mostly on the size of the conformation space of the design. More mutable and flexible residues create a larger conformation space which must be searched systematically to find the lowest-energy conformations while preserving guarantees on solution quality, and hence the search requires more time. Search time is also dependent on the speed at which we can execute the scoring functions on \as nodes. Optimizations in \osprey3 have dramatically increased the \as node scoring speed mainly through the re-use of computed values between different nodes. Many intermediate values used by the \as scoring functions need only be computed once per design and can be cached throughout the rest of the search. This reduces the cost of node scoring by roughly an order of magnitude. We can also score child nodes differentially against their parent nodes to speed up node scoring. Caching intermediate values during the parent node scoring and using them to simplify child node scoring yields roughly another order of magnitude speedup in \as node scoring. %\jeff{trying to be concise here, hopefully we don't need the mathematical details of these \as scoring functions?}
 
 \osprey3 also includes optimizations to improve the performance of forcefield evaluation and conformation minimization. The code in \osprey3 which evaluates forcefield energies for a protein conformation has been heavily optimized, although speed gains here over \osprey2 are modest (roughly two-fold), since the original code was already well-optimized in this area. Much larger performance increases were gained by caching forcefield parameters and lists of atom pairs between different conformations to be minimized yielded roughly a 10-fold increase in speed. %\jeff{I'm going off of memory for the impact of these optimizations. Hopefully rough estimates are good enough here? Or maybe this is too much detail altogether?}
 
