--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -121,7 +121,7 @@ We present the third major release of the OSPREY protein design software, along 
 \input{python.tex}
 
 
-\section*{\sffamily \Large NEW PROTEIN DESIGN ALGORITHMS IN VERION 3}
+\section*{\sffamily \Large NEW PROTEIN DESIGN ALGORITHMS IN VERSION 3}
 \jccsubsection{LUTE: Putting advanced modeling into a form suitable for efficient, discrete design calculations}
 \input{LUTE.tex}
 \jccsubsection{CATS: Local backbone flexibility in all biophysically feasible dimensions}
