--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,1 @@
-We present \osprey 3, a new and greatly improved release of the \osprey protein design software.  \osprey 3 features a convenient Python interface, greatly improving \osprey's ease of use.  \osprey 3 also includes several new algorithms, which introduce substantial speedups as well as improved biophysical modeling.  Even without these improved algorithms, \osprey 3 is over two orders of magnitude faster than previous versions of \osprey when run on the same hardware.  It also introduces GPU support, which provides an additional speedup of over an order of magnitude when run on desktop-class GPUs.  \osprey has always offered a unique package of advantages over other design software: provable design algorithms, awareness of continuous flexibility during design, and modeling of conformational entropy.  With this new version, we believe it empowers significantly improved computational protein design compared to the previous state of the art.  
+We present \osprey 3.0, a new and greatly improved release of the \osprey protein design software.  \osprey 3.0 features a convenient new Python interface, which greatly improves its ease of use.  It is over two orders of magnitude faster than previous versions of \osprey when running the same algorithms on the same hardware.  Moreover, \osprey 3.0 includes several new algorithms, which introduce substantial speedups as well as improved biophysical modeling.  It also includes GPU support, which provides an additional speedup of over an order of magnitude.  Like previous versions of \osprey, \osprey 3.0 offers a unique package of advantages over other design software, including provable design algorithms that account for continuous flexibility during design and model conformational entropy.  Finally, we show here empirically that \osprey 3.0 accurately predicts the effect of mutations on protein-protein binding. \osprey 3.0 is available at https://github.com/donaldlab/OSPREY\_refactor/tree/python as open-source software.    
